--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_policy(SET CMP0091 NEW)
-
 project(cpp)
-
 cmake_minimum_required(VERSION 3.0)
-add_executable(cpp main.cpp)
+
+set(SOURCE_FILES main.cpp cryptosystems.h Server.h)
+add_executable(cpp ${SOURCE_FILES})
+
 target_compile_features(cpp PRIVATE cxx_std_17)
 set(EXTERNAL_LIB_HEADERS lib/cryptopp)
 target_include_directories(cpp PRIVATE ${EXTERNAL_LIB_HEADERS})
