Added socket support for Linux and macOS

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -12,8 +12,6 @@ target_include_directories(cpp PRIVATE ${EXTERNAL_LIB_HEADERS})
 If(WIN32)
   set_property(TARGET cpp PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
   target_link_libraries(cpp PRIVATE ${CMAKE_SOURCE_DIR}/lib/cryptopp/x64/Output/Debug/cryptlib.lib)
-elseif(APPLE)
-  target_link_libraries(cpp PRIVATE ${CMAKE_SOURCE_DIR}/lib/cryptopp/libcryptopp.dylib)
-elseif(UNIX NOT APPLE)
+else()
   target_link_libraries(cpp PRIVATE ${CMAKE_SOURCE_DIR}/lib/cryptopp/libcryptopp.a)
 endif()
